--- a/.spawnfile.yml
+++ b/.spawnfile.yml
@@ -9,16 +9,19 @@ components:
     before:
       - entrypoint: [ npm, i ]
         workdir: reveal.js.tmp
+        tee:
+          combined: true
         before:
           - entrypoint: [ ln ]
-            cmd: [ -s, -f, "{{.WorkDir}}/index.html", reveal.js.tmp/index.html ]
+            cmd: [ -s, -f, "{{.ContextDir}}/index.html", reveal.js.tmp/index.html ]
+            tee:
+              combined: true
             before:
               - entrypoint: [ git ]
                 cmd: [ clone, https://github.com/hakimel/reveal.js.git, reveal.js.tmp ]
-    after:
-      - entrypoint: [ rm ]
-        cmd: [ -rf, reveal.js ]
   - entrypoint: [ ttyd, -c, user:passw0rd, -p, 2375, -m, 1 ]
     cmd: [ zsh ]
+    workdir: "{{.ContextDir}}"
+    skip-prefix: true
     tee:
       combined: true
